<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_flocking</name>
  <version>0.0.0</version>
  <description>This package implements a flocking offboard control algorithm for the PX4 autopilot.</description>
  <maintainer email="theotime.balaguer@gmail.com">theotime</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>obstacle_detector</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
