<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flocking_controller</name>
  <version>0.0.0</version>
  <description>Flocking controllers for Mini-DANCERS simulator.</description>
  <maintainer email="theotime.balaguer@gmail.com">theotime</maintainer>
  <author>Etienne Villemure/etienn8@gmail.com, Theotime Balaguer/theotime.balaguer@gmail.com</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dancers_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
